2003-08-06  Sam Steingold  <sds@gnu.org>

	* configure: link all modules/* files, not just directories
	* modules/exporting.lisp: new files, abstracted from linux.lisp
	* makemake.in: compile exporting.lisp
	* modules/bindings/glibc/linux.lisp, modules/netica/netica.lisp:
	* modules/postgresql/postgresql.lisp: load exporting.lisp

2003-08-06  Sam Steingold  <sds@gnu.org>

	removed obsolete module linuxlibc5 and renamed linuxlibc6 to glibc

2003-08-06  Sam Steingold  <sds@gnu.org>

	Unified modules postgresql632 and postgresql642 into postgresql
	* Makefile.devel: use implicit rules for configure and config.h.in
	(CONFIGURES, CONFIG_H_IN): added postgresql

2003-08-06  Sam Steingold  <sds@gnu.org>

	the demo now works just fine
	* modules/netica/demo.lisp: use DEFPARAMETER
	* modules/netica/wrap.lisp (null-pointer): removed (use NIL instead)
	(check-errors): use CERROR
	(make-net): set comment and title
	(net-info, node-info): new functions
	(make-node): fixed the SetNodeProbs_bn call
	(make-node-wrapper): new build-time macro
	(GetNodeBeliefs, GetNodeExpectedUtils, GetNodeLikelihood)
	(GetNodeProbs): new low-level wrappers defined with it
	(save-net): fixed file type merging
	* modules/netica/netica.lisp (MAX_PARENT, MAX_STATE): removed
	(GetNodeBeliefs_bn, GetNodeExpectedUtils_bn, SetNodeProbs_bn)
	(GetNodeLevels_bn, GetNodeProbs_bn): fixed declarations

2003-08-06  Sam Steingold  <sds@gnu.org>

	* modules/regexp/regexi.c (mregexec): new function
	* modules/regexp/regexp.lisp (num-matches, regexec): removed
	(mregexec): replaces regexec
	(regexp-exec): return an arbitrary number of matches, not limited
	by num-matches

2003-08-05  Sam Steingold  <sds@gnu.org>

	* foreign.d (convert_from_foreign): treat NULL as NIL
	(convert_to_foreign): treat NIL as NULL
	* foreign1.lisp (foreign-address-null): removed
	* deprecated.lisp (deprecate): export from the home package
	(foreign-address-null): deprecated

2003-08-05  Sam Steingold  <sds@gnu.org>
