@@ -4,7 +4,7 @@ Important notes
 * All .fas files generated by previous CLISP versions are invalid and
   must be recompiled.  This is not as bad as it was before: the invalid
   files will be ignored and the sources will be loaded instead of
-  signalling an error unless you set CUSTOM:*LOAD-OBSOLETE-ACTION*.
+  signaling an error unless you set CUSTOM:*LOAD-OBSOLETE-ACTION*.
   See <http://clisp.cons.org/impnotes.html#loadfile> for details.
 
 * All custom-written external modules must be updated to reflect
@@ -199,6 +199,8 @@ User visible changes
   The postgresql module works with PostgreSQL 6 and 7 now.
 
 * Removed obsolete module linuxlibc5 and renamed module linuxlibc6 to glibc.
+
+* New module: bindings/win32 (highly incomplete, patches are welcome).
 
 * The BACKQUOTE reader has been reimplemented from scratch by
   Kaz Kylheku <kaz@ashi.footprints.net>.
